# HOJA-LIB-ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE.md  Makefile  README.md  component.mk  esp_hid_gap.c  hoja_backend.c  hoja_frontend.c  hoja_settings.c  sdkconfig
components/hoja_lib/: CMakeLists.txt  Kconfig  core_gamecube_backend.c  core_snes_backend.c  core_switch_backend.c  core_switch_comms.c  core_switch_controller.c  core_switch_input.c  core_switch_reports.c  core_switch_spi.c  core_usb_backend.c  hoja_backend.c  hoja_frontend.c  hoja_settings.c  idf_component.yml  rsc_descriptors.c  util_battery.c  util_i2c.c  util_joybus_rmt.c  util_rgb.c  util_wired_detect.c
components/hoja_lib/cores/: core_bt_dinput.c  core_bt_xinput.c  core_snes_backend.c  core_switch_backend.c
components/hoja_lib/cores/switch/: core_switch_comms.c  core_switch_controller.c  core_switch_input.c  core_switch_spi.c
components/hoja_lib/descriptors/: BlueRetro Notes for GameCube.txt  ESP-IDF Changes  NS-USB-descriptor.txt  NS-USB-descriptors More.txt  Xbox-One-Descriptor  joycon_l  procon
components/hoja_lib/include/: core_gamecube_backend.h  core_snes_backend.h  core_switch_backend.h  core_switch_comms.h  core_switch_controller.h  core_switch_imu.h  core_switch_input.h  core_switch_reports.h  core_switch_spi.h  core_switch_vibration.h  core_usb_backend.h  hoja_backend.h  hoja_frontend.h  hoja_includes.h  hoja_settings.h  hoja_types.h  rsc_descriptors.h  util_battery.h  util_common.h  util_gamepad.h  util_i2c.h  util_joybus.h  util_joybus_rmt.h  util_rgb.h  util_wired_detect.h
components/hoja_lib/include/cores/: core_bt_dinput.h  core_bt_xinput.h  core_gamecube_backend.h  core_snes_backend.h  core_switch_backend.h  core_usb_backend.h
components/hoja_lib/include/cores/switch/: core_switch_comms.h  core_switch_imu.h  core_switch_input.h  core_switch_vibration.h
components/hoja_lib/include/utilities/: util_battery.h  util_bt_hid.h  util_rmt.h
components/hoja_lib/utilities/: util_bt_hid.c
components/hoja_lib/web/: index.html
components/retroblue_api/: CMakeLists.txt  rbc_gamecube_core.c  rbc_snes_core.c  rbc_switch_comms.c  rbc_switch_controller.c  rbc_switch_core.c  rbc_switch_input.c  rbc_switch_reports.c  rbc_switch_spi.c  rbc_usb_core.c  rbc_util_joybus_rmt.c  retroblue_api.c  retroblue_backend.c  retroblue_settings.c
components/retroblue_api/descriptors/: ESP-IDF Changes  NS-USB-descriptor.txt  gamepad_generic  n64  snes
components/retroblue_api/include/: rbc_err.h  rbc_gamecube_core.h  rbc_snes_core.h  rbc_switch_comms.h  rbc_switch_controller.h  rbc_switch_core.h  rbc_switch_imu.h  rbc_switch_input.h  rbc_switch_reports.h  rbc_switch_spi.h  rbc_switch_vibration.h  rbc_usb_core.h  rbc_util_joybus.h  rbc_util_joybus_rmt.h  retroblue_api.h  retroblue_backend.h  retroblue_settings.h
cores/: core_bt_dinput.c  core_bt_xinput.c  core_gamecube_backend.c  core_joybus_backend.c  core_snes_backend.c  core_switch_backend.c  core_usb_backend.c
descriptors/: BlueRetro Notes for GameCube.txt  ESP-IDF Changes  NS-USB-descriptor.txt  NS-USB-descriptors More.txt  Xbox-One-Descriptor  gamepad_generic  joycon_r  n64  oem-gamecube-adapter-HID.txt  (+2 more)
main/: CMakeLists.txt  main.c  main.h  rbc_err.h  rbc_switch_comms.c  rbc_switch_controller.c  rbc_switch_controller.h  rbc_switch_core.c  rbc_switch_core.h  rbc_switch_input.c  rbc_switch_input.h  rbc_switch_mcu.h  rbc_switch_reports.c  rbc_switch_reports.h  rbc_switch_spi.c  rbc_switch_utils.h  retroblue_api.c  retroblue_api.h  retroblue_backend.c  retroblue_backend.h  retroblue_settings.c  retroblue_settings.h
(+60 files in other folders)
